some CSS corrections. still ugly tho. but more acceptable. cannot get a hold of the vertical align shit.

--- a/ui/src/main/java/com/fbratu/relevant/gwt/client/view/login/LoginPanel.css
+++ b/ui/src/main/java/com/fbratu/relevant/gwt/client/view/login/LoginPanel.css
@@ -3,8 +3,8 @@
     position: fixed;
 
     /* set position */
-    top: 20px;
-    right: 30px;
+    top: 0px;
+    right: 0px;
 }
 
 .labelText {
@@ -36,13 +36,13 @@
     border: 1px solid #AACCEE;
     display: block;
     font-size: 12px;
-    margin: 0 0 5px;
+    margin: 0 5px;
     padding: 3px;
-    width: 203px;
+    width: 100px;
 }
 
 .background {
-    background-color: #999999;
+    background-color: #F8F8F8;
     border: 1px none transparent;
     color: #000000;
     font-size: 11px;
